--- a/FRAProject/Areas/Administration/Views/RiskManagement/GetRiskAssessment.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/GetRiskAssessment.cshtml
@@ -33,8 +33,8 @@
                         <td class="textFWith120"><a data-toggle="collapse" href="#detailsRow_@item.RiskAssessmentID" aria-expanded="false" aria-controls="detailsRow_@item.RiskAssessmentID" class="cBlack">@item.EntryDate.ToShortDateString()</a></td>
                         <td class="textFWith110a"><a data-toggle="collapse" href="#detailsRow_@item.RiskAssessmentID" aria-expanded="false" aria-controls="detailsRow_@item.RiskAssessmentID" class="cBlack">@item.RevisionNo</a></td>
                         <td class="textFWith220">                            
-                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modal-riskManagement" data-backdrop="static" data-keyboard="false" onclick="GetToEditRiskAssessment(@item.RiskAssessmentID)"><i class="fal fa-edit pr3"></i> Edit</button>                            
-                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-" data-backdrop="static" data-keyboard="false" onclick=""><i class="fal fa-trash-alt pr3"></i> Delete</button>
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modal-riskManagement" data-backdrop="static" data-keyboard="false" onclick="getRiskAssessmentToEdit('@item.RiskAssessmentID')"><i class="fal fa-edit pr3"></i> Edit</button>                            
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-riskDetail" data-backdrop="static" data-keyboard="false" onclick="getRiskAssessmentToDelete('@item.RiskAssessmentID')"><i class="fal fa-trash-alt pr3"></i> Delete</button>
                         </td>
                     </tr>
                     <tr  class="itemdetail">                        
@@ -83,8 +83,8 @@
                                                 @{
                                                     var paramEdit = scoreView.RiskAssessmentID + "_" + scoreView.RiskDetailsID;
                                                     var id = scoreView.RiskAssessmentID + "_" + scoreView.RiskDetailsID;
-                                                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modal-riskGuideLine" data-backdrop="static" data-keyboard="false" onclick="EditRiskDetial('@paramEdit')"><i class="far fa-edit f25"></i> Edit</button>
-                                                    <button type="button" class="btn btn-danger"><i class="far fa-trash-alt f25"></i> Delete</button>
+                                                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modal-riskGuideLine" data-backdrop="static" data-keyboard="false" onclick="getRiskDetailToEdit('@paramEdit')"><i class="far fa-edit f25"></i> Edit</button>
+                                                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-riskDetail" data-backdrop="static" data-keyboard="false" onclick="getRiskDetailToDelete('@paramEdit')"><i class="far fa-trash-alt f25"></i> Delete</button>
 
                                                     var hiddenTotalSectionRecord = "SectionTotalRecord_" + id;
                                                     var hiddenRiskDetailsId = "RiskDetailsID_" + id;
