--- a/FRAProject/wwwroot/css/accordion.css
+++ b/FRAProject/wwwroot/css/accordion.css
@@ -10,7 +10,8 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    width: calc(100% - 5px);
+    /*width: calc(100% - 5px);*/
+    width: 1000px;
 }
 
 
