--- a/FRAProject/Areas/Administration/Views/RiskManagement/AddNewRisk.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/AddNewRisk.cshtml
@@ -27,9 +27,9 @@
                         <input asp-for="Organization" id="Organization" class="form-control textFWith400" />
 
                         <label asp-for="EntryDate" class="textFWith110">Date</label>
-                        <div id="date-container" style="width: 300px">
+                        <div id="date-container1" style="width: 300px">
                             <div class="input-group date">
-                                <input asp-for="EntryDate" type="text" id="EntryDate" data-provide="datepicker" class="form-control textFWith300"><span class="input-group-addon dateButton"><i class="fal fa-calendar-alt" style="font-size: 25px"></i></span>
+                                <input asp-for="EntryDate" type="text" id="EntryDate" class="form-control textFWith300"><span class="input-group-addon dateButton"><i class="fal fa-calendar-alt" style="font-size: 25px"></i></span>
                             </div>
                         </div>
                         
