--- a/FRAProject/Areas/Administration/Views/RiskManagement/EditRisk.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/EditRisk.cshtml
@@ -70,7 +70,7 @@
                         <label asp-for="SurveyDate" class="textFWith110">Date </label>
                         <div id="date-container2" style="width: 300px">
                             <div class="input-group date">
-                                <input asp-for="SurveyDate" id="SurveyDate" class="form-control textFWith300"/><span class="input-group-addon dateButton"><i class="fal fa-calendar-alt" style="font-size: 25px"></i></span>
+                                <input asp-for="SurveyDate" type="text" id="SurveyDate" class="form-control textFWith300"/><span class="input-group-addon dateButton"><i class="fal fa-calendar-alt" style="font-size: 25px"></i></span>
                             </div>
                         </div>
                     </div>
